BugFixed: menu de opciones para eliminar/editar una publicacion en modo theater se muestra bien. BugFixed: el anidamiento de las tarjetas de las stories y chapters se debia a truncatechars en el template. Se cambio truncatechars por truncatechars_html.

--- a/static/base/css/theater.css
+++ b/static/base/css/theater.css
@@ -71,10 +71,6 @@ to {
     position: static;
 }
 
-.publication-header{
-    overflow-y: hidden;
-}
-
 .hided-menu-pub {
     width: 0px;
     height: 0px;
@@ -341,6 +337,7 @@ to {
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
+    position: absolute;
     border: 1px solid black;
     display: none;
     min-width: 160px;
